Fixing Overflow on Mob

--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -142,7 +142,7 @@ footer p {
    }
 
    #Showcase p {
-     font-size: 20px
+     font-size: 20px;
      overflow: hidden;
    }
  }
